--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,20 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/icon"
         android:label="GodOfSaltos"
-        android:roundIcon="@mipmap/icon"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.JuegoAndroidSnake"
-        tools:targetApi="31"
-        >
+        android:theme="@style/Theme.JuegoAndroidSnake">
         <activity
 
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="landscape">
+             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
