--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon"
-        android:label="GodOfSaltos"
+        android:label="ScottAdventure"
         android:theme="@style/Theme.JuegoAndroidSnake">
         <activity
             android:name=".SplashScreen"
@@ -33,6 +33,9 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
 
     </application>
 
